# make

./: .ccls  .clangd  .cvsignore  .dir-locals.el  .gitignore  AUTHORS  Basic.mk.template  ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.3  INSTALL  Makefile.DOS.template  Makefile.am  Makefile.ami  NEWS  NMakefile.template  README.Amiga  README.DOS  README.DOS.template  README.OS2  README.OS2.template  README.VMS  README.W32  README.W32.template  README.customs  README.cvs  README.git  README.in  README.template  SMakefile.template  TODO.private  acinclude.m4  amiga.c  amiga.h  ar.c  arscan.c  autogen.sh  autopull.sh  bootstrap  (+81 more)
config/: .gitignore  ChangeLog  ChangeLog.1  Makefile.am  acinclude.m4  dospaths.m4
doc/: .gitignore  Makefile.am  make.1  make.texi
gl/: .gitignore  README
gl/lib/: glob.c  glob.in.h
gl/m4/: acinclude.m4  dospaths.m4  getloadavg.m4
gl/modules/: concat-filename  findprog-in  getloadavg  make-glob  make-macros
glob/: SCOPTIONS
lib/: .gitignore  glob.c
m4/: .gitignore  acinclude.m4  dospaths.m4
mk/: Amiga.mk  Posix.mk.in  VMS.mk  Windows32.mk  msdosdjgpp.mk
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in
scripts/: copyright-update
src/: amiga.c  amiga.h  ar.c  arscan.c  commands.c  commands.h  config.ami  config.ami.template  config.h-vms  config.h-vms.template  config.h.W32  config.h.W32.template  configh.dos  configh.dos.template  debug.h  default.c  dep.h  dir.c  expand.c  file.c  filedef.h  function.c  getloadavg.c  getopt.c  getopt.h  getopt1.c  gettext.h  gmk-default.scm  gnumake.h  guile.c  hash.c  hash.h  implicit.c  job.c  job.h  load.c  loadapi.c  main.c  makeint.h  misc.c  (+29 more)
src/w32/: pathstuff.c  w32os.c
src/w32/compat/: dirent.c  posixfcn.c
src/w32/include/: dirent.h  dlfcn.h  pathstuff.h  sub_proc.h  w32err.h
src/w32/subproc/: misc.c  proc.h  sub_proc.c  w32err.c
tests/: .gitignore  ChangeLog  ChangeLog.1  NEWS  README  config-flags.pm.in  config_flags_pm.com  jhelp.pl  mkshadow  run_make_tests.bat  run_make_tests.com  run_make_tests.pl  test_driver.pl  thelp.pl
tests/scripts/features/: archives  comments  conditionals  default_names  double_colon  errors  escape  exec  expand  export  grouped_targets  implicit_search  include  jobserver  load  loadapi  mult_rules  output-sync  parallel-sync  parallelism  patternrules  reinvoke  se_explicit  se_implicit  se_statpat  statipattrules  suffixrules  targetvars  temp_stdin  vpath  vpathgpath  vpathplus
tests/scripts/functions/: eval  file  foreach  guile  intcmp  let  origin  shell  wildcard  word
tests/scripts/misc/: bs-nl  close_stdout  general1  general2  general3  general4
tests/scripts/options/: dash-B  dash-C  dash-I  dash-W  dash-e  dash-f  dash-k  dash-l  dash-n  dash-r  eval  print-directory  print-targets  shuffle  symlinks  warn  warn-undefined-variables
tests/scripts/targets/: DELETE_ON_ERROR  IGNORE  INTERMEDIATE  NOTINTERMEDIATE  ONESHELL  POSIX  SILENT  WAIT
tests/scripts/variables/: EXTRA_PREREQS  GNUMAKEFLAGS  INCLUDE_DIRS  MAKEFLAGS  MAKE_RESTARTS  SHELL  WARNINGS  append  automatic  conditional  define  flavors  negative  private  special
w32/: Makefile.am  pathstuff.c  w32os.c
w32/compat/: dirent.c  posixfcn.c
w32/include/: dirent.h  dlfcn.h  pathstuff.h  sub_proc.h  w32err.h
w32/subproc/: NMakefile  build.bat  misc.c  proc.h  sub_proc.c  w32err.c
